--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,8 @@ dependencies:
     sdk: flutter
 
 environment:
-  sdk: '>=2.12.0 <4.0.0'
-  flutter: '>=1.10.0'
+  sdk: ">=2.12.0 <4.0.0"
+  flutter: ">=1.10.0"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
