--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,31 +3,25 @@ description: Demonstrates how to use the flutter_compass plugin.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
+# cupertino_icons,permission_handler
 dependencies:
+  cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-
-  permission_handler: ^6.0.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
+  flutter_compass:
+    path: ../
   flutter_test:
     sdk: flutter
 
-  flutter_compass:
-    path: ../
-
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -39,13 +33,10 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - assets/compass.jpg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
